<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.marklordan.airgead.ui.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/email_sign_in_button">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="154dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/no_account_textview"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/no_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_no_account"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_action"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/sign_up_action"
        app:layout_constraintRight_toRightOf="@+id/sign_up_action"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/sign_up_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/action_sign_up"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/login_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/email_login_form"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/email_login_form"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/login_app_title"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_app_title"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/email_login_form" />

    <ProgressBar
        android:id="@+id/loginProgressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/email_sign_in_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login_form"/>

    <TextView
        android:id="@+id/skip_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:onClick="skipLoginProcess"
        android:text="@string/skip"
        app:layout_constraintRight_toRightOf="@+id/email_login_form"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_login_form"/>

</android.support.constraint.ConstraintLayout>
